--- a/algorithm/algorithmTest/algorithmTest/algorithmTest.vcxproj
+++ b/algorithm/algorithmTest/algorithmTest/algorithmTest.vcxproj
@@ -49,6 +49,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="testFixedArray.cpp" />
+    <ClCompile Include="testFixedArray2D.cpp" />
     <ClCompile Include="testIntegerArray.cpp" />
   </ItemGroup>
   <ItemGroup>
