--- a/algorithm/kalgorithm/kalgorithm.vcxproj.filters
+++ b/algorithm/kalgorithm/kalgorithm.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClInclude Include="IntegerArray.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="FixedArray.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="FixedArray2D.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="kalgorithm.cpp">
