--- a/algorithm/kalgorithm/kalgorithm.vcxproj.filters
+++ b/algorithm/kalgorithm/kalgorithm.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="FixedArray2D.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Number.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="kalgorithm.cpp">
@@ -39,6 +42,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="IntegerArray.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Number.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
