--- a/algorithm/kalgorithm/kalgorithm.vcxproj.filters
+++ b/algorithm/kalgorithm/kalgorithm.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Number.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Chapter01.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="kalgorithm.cpp">
@@ -45,6 +48,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Number.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Chapter01.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
