--- a/cpp_intermediate/cpp_intermediate/cpp_intermediate.vcxproj.filters
+++ b/cpp_intermediate/cpp_intermediate/cpp_intermediate.vcxproj.filters
@@ -18,5 +18,32 @@
     <ClCompile Include="cpp_intermediate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="00_thiscall1_basic1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="00_thiscall2_ptr_to_mf1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="00_thiscall2_ptr_to_mf2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="00_thiscall3_ptr_to_md1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="00_thiscall3_ptr_to_md2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="00_thiscall4_max1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="00_thiscall4_max2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="00_thiscall4_max3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="00_thiscall4_max4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
